tests/compile-fail/uninit_buffer.stderr
error: Undefined Behavior: reading 16 bytes of memory starting at ALLOC, but 12 bytes are uninitialized starting at ALLOC+$HEX, and this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `<u8 as core::slice::cmp::SliceOrd>::compare` at rustc_src/src/slice/cmp.rs:LL:CC
   = note: inside `core::slice::cmp::<impl std::cmp::Ord for [u8]>::cmp` at rustc_src/src/slice/cmp.rs:LL:CC
note: inside `main` at $DIR/uninit_buffer.rs:LL:CC
  --> $DIR/uninit_buffer.rs:LL:CC
   |
LL |         drop(slice1.cmp(slice2));
   |              ^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

Uninitialized read occurred at offsets $HEX..$HEX into this allocation:
ALLOC (Rust heap, size: 32, align: 8) {
    $HEX │ 41 42 43 44 __ __ __ __ __ __ __ __ __ __ __ __ │ ABCD░░░░░░░░░░░░
    $HEX │ 00 __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ │ .░░░░░░░░░░░░░░░
}

error: aborting due to previous error

